@@ -1,0 +1,21 @@
+//-------------------------------------------------------------------------------------------
+//
+// ReactionManager.cpp
+//
+// Author: Struan Robertson
+// Date:   26/Feb/2011
+//
+// This file contains implementation of the master equation collision operator class.
+//
+//-------------------------------------------------------------------------------------------
+#include "CollisionOperator.h"
+
+#include "AssociationReaction.h"
+#include "IrreversibleUnimolecularReaction.h"
+#include "IsomerizationReaction.h"
+#include "IrreversibleExchangeReaction.h"
+
+namespace mesmer
+{
+
+}  //namespace
